# httpx-cache

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/workflows/: codeql-analysis.yml  publish-pypi.yml  publish.yml  test.yml
api/: index.html
cache_control/: index.html
docs/: api.md  cache_control.md  guide.md  index.md
examples/: async_cache_client.py  async_client.py  dict_cache_client.py  file_cache_client.py  streaming_response.py  sync_client.py
guide/: index.html
httpx_cache/: __init__.py  cache_control.py  client.py  transport.py  utils.py
httpx_cache/cache/: __init__.py  base.py  default.py  file.py  memory.py  redis.py
httpx_cache/serializer/: __init__.py  base.py  common.py  default.py
httpx_cache/transport/: __init__.py  _async.py  _sync.py  base.py  default.py  utils.py
search/: search_index.json
tests/: conftest.py  test_cache_control.py  test_cache_default.py  test_cache_file.py  test_client.py  test_e2e.py  test_transport.py  test_transport_base.py  test_transport_default.py  test_transport_utils.py  test_utils.py
tests/cache/: test_cache_default.py  test_cache_file.py  test_cache_memory.py  test_cache_redis.py
tests/serializer/: test_serializer_base.py  test_serializer_common.py  test_serializer_default.py
tests/transport/: test_transport_async.py  test_transport_base.py  test_transport_sync.py
