[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpx-cache"
version = "0.10.0"
description = "Simple caching transport for httpx."
readme = "README.md"
requires-python = ">=3.7"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Ouail Bendidi", email = "ouail.bendidi@gmail.com" },
]
repository = "https://github.com/obendidi/httpx-cache"
homepage = "https://github.com/obendidi/httpx-cache"
keywords = ["httpx", "cache", "cache-control"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "httpx~=0.23",
  "anyio~=3.0",
  "msgpack~=1.0",
  "fasteners>=0.16.3,<0.18.0",
  "attrs>=21.4,<23.0",
  "aiorwlock~=1.2"
]

[project.optional-dependencies]
redis = ["redis~=4.5"]

[project.urls]
Homepage = "https://github.com/obendidi/httpx-cache"
Documentation = "https://obendidi.github.io/httpx-cache/"

[tool.hatch.envs.dev]
extra-dependencies = [
    "httpx-cache[redis]",
    # Test dependencies
    "pytest~=7.2",
    "coverage[toml]~=6.5",
    "pytest-cov~=3.0",
    "chardet~=5.0",
    "types-chardet~=5.0",
    "pytest-cases~=3.6.8",
    "respx~=0.19",
    "mock~=4.0",
    "types-mock~=4.0",
    # Linting
    "ruff~=0.0.260",
    "black~=23.3.0",
    "mypy~=1.1.1",
    "pre-commit",
    # Doc dependencies
    "mkdocs~=1.4",
    "mkautodoc~=0.1",
    "mkdocs-material~=8.1"
]


[tool.hatch.envs.dev.scripts]
fmt = ["ruff --fix .", "black ."]
lint = ["ruff .", "black --check --diff ."]
typing = "mypy --install-types --non-interactive httpx_cache"
test = "pytest -ra -q -vv --cov=httpx_cache --cov-report=term-missing --cov-report=xml --cov-config=pyproject.toml"
docs-build = "mkdocs build --clean --strict"
docs-serve = "mkdocs serve --dev-addr localhost:8000"
docs-deploy = "mkdocs gh-deploy"

[tool.ruff.isort]
known-first-party = ["httpx_cache"]
known-third-party = ["httpx", "attrs", "msgpack", "anyio"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["**/tests/test_*.py"]
fail_under = 90
